Fix runtime regression guard file loading